<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:iconTint="@color/white"
        android:tint="@color/white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourites_heart_white_24dp"
        android:title="@string/title_favourites"
        android:tint="@color/white"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/title_notifications"
        android:tint="@color/white"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_white"
        android:title="@string/settings"
        android:tint="@color/white"/>

</menu>