<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"

            app:toolbarId="@+id/toolbar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#00000000"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/welcomeUserTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8sp"
                    android:gravity="center_vertical"
                    android:text="@string/userWelcome"
                    android:textColor="@color/white"
                    android:textSize="36sp" />
            </androidx.cardview.widget.CardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settingsNSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_anchor="@+id/settingsNSV"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/notificationSettingCardView"
                android:layout_width="410dp"
                android:layout_height="52dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="add"
                android:clickable="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19999999">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/notificationSettingLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/notificationSettingTitle"
                        android:layout_width="344dp"
                        android:layout_height="33dp"
                        android:text="@string/notification_frequency"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.909"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.238" />

                    <TextView
                        android:id="@+id/notificationSettingDescription"
                        android:layout_width="343dp"
                        android:layout_height="25dp"
                        android:text="@string/change_how_often_you_will_receive_notifications"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/notificationSettingTitle"
                        app:layout_constraintTop_toBottomOf="@+id/notificationSettingTitle"
                        app:layout_constraintVertical_bias="1.0" />

                    <ImageView
                        android:id="@+id/notificationSettingImage"
                        android:layout_width="55dp"
                        android:layout_height="54dp"
                        android:contentDescription="@string/bell_notification_icon"
                        android:src="@drawable/ic_notifications_black_24dp"
                        app:layout_constraintEnd_toStartOf="@+id/notificationSettingTitle"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/rebuildDatabaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/rebuild_database"
                app:layout_constraintStart_toEndOf="@+id/logoutButton"
                app:layout_constraintTop_toTopOf="@+id/logoutButton" />

            <TextView
                android:id="@+id/actionsText"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/other"
                android:textColor="#FFF7BA5B"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.68" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Log_out"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>