<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/grey">

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/Login"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/username"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_person_primary_24dp"
            android:hint="@string/Username"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLength="16"/>

        <EditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_password_primary_24dp"
            android:hint="@string/Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16" />

        <Button
            android:id="@+id/login"
            style="@style/Button.Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>